# CortexML

./: CMakeLists.txt  CSVReader.hpp  Cortex.hpp  LICENSE  Netspecs.hpp  NeuralTensor.hpp  README.md  main.cpp
